# hubo_motion_ros

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  mainpage.dox  package.xml  plugin_description.xml
action/: ExecuteGripper.action  ExecuteJointTrajectory.action  ExecutePoseTrajectory.action  ExecuteWaistAngle.action
include/: DummyParams.h  HuboKin.h  manip.h
include/hubo_motion_ros/: AchMonitor.h  AchNetworkWidget.h  AchROSBridge.h  DrcHuboKin.h  HuboStateAchBridge.h  PoseConverter.h  drchubo_joint_names.h  hubo_joint_names.h  hubo_motion_panel.h  manip_tab.h
launch/: fullbody_teleop.launch  hubo_manipulation.launch  hubo_state.launch  ikfast_sim_teleop.launch  manipulation_pipeline.launch  ros_hubo.launch  sim_teleop.launch
msg/: ManipulationState.msg  TeleopCmd.msg  TeleopPoseNudge.msg
src/libraries/: DrcHuboKin.cpp  HuboKin.cpp  HuboStateAchBridge.cpp  PoseConverter.cpp  ikfast_rightArm.cpp
src/nodes/: ach_monitor.cpp  callback_test.cpp  fullbody_teleop.cpp  hubo_hw_state_publisher.cpp  hubo_manip_traj_forwarder.cpp  hubo_trajectory_server.cpp  ikfast_kinematics_server.cpp  joint_trajectory_to_states.cpp  kinematics_server.cpp  ros_activity_coordinator.cpp  ros_syscall.cpp  simple_teleop.cpp  trajectory_publisher.cpp
src/plugins/: AchNetworkWidget.cpp  hubo_motion_panel.cpp  hubo_motion_panel_slots.cpp
src/tests/: test_units.cpp
src/tests/system/: kinematics_server.test  manipulation_server.test  testIKSystem.cpp  test_kinematics_server.cpp  test_manipulation_forwarder.cpp  test_manipulation_server.cpp
src/tests/unit/: TestDrcHuboKin.cpp  TestJointNames.cpp
